[package]
name = "decay"
version = "0.1.0"
authors = ["Donald Whyte <donaldwhyte0@gmail.com>"]
repository = "https://github.com/DonaldWhyte/decay"
homepage = "https://github.com/DonaldWhyte/decay"
documentation = "https://github.com/DonaldWhyte/decay"
license = "MIT"
readme = "README.md"
keywords = [ "type", "decay", "macro", "helper", "development" ]
categories= [
    "development-tools::procedural-macro-helpers"
]
description="Macro for decaying Rust types to their simplest value type form"

[lib]
name = "decay"
crate-type = ["dylib"]
plugin = true

[dependencies]
